Update: read images

--- a/MiniProyecto1.ipynb
+++ b/MiniProyecto1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,33 +25,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "images = []\n",
-    "image = cv2.imread('archive/Baroque/adriaen-brouwer_a-boor-asleep.jpg')\n",
-    "images.append(image)\n"
+    "clases = pd.read_csv('classes.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/18/88x5gxxj0wq949rkr1_qj3_45113mn/T/ipykernel_15379/2765573548.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  clases_filtred['path'] = 'archive/' + clases_filtred['filename']\n"
+     ]
+    }
+   ],
+   "source": [
+    "clases_filtred = clases[clases['filename'].str.contains(r'^[a-zA-Z0-9_/\\-.]+$', regex=True)]\n",
+    "clases_filtred['path'] = 'archive/' + clases_filtred['filename']\n",
+    "\n",
+    "imagenes_random = clases_filtred['path'].sample(n=1000, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images = []\n",
+    "features = []\n",
+    "for ima in  imagenes_random:\n",
+    "    image = cv2.imread(ima)\n",
+    "    image_resized = cv2.resize(image, (480,480), interpolation=cv2.INTER_AREA)\n",
+    "    images.append(image_resized)\n",
+    "    features.append(cv2.cvtColor(image, cv2.COLOR_BGR2RGB))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1843, 1382, 3)"
+       "(1837, 1382, 3)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "image.shape"
+    "features[2].shape"
    ]
   },
   {
