--- a/MiniProyecto1.ipynb
+++ b/MiniProyecto1.ipynb
@@ -1052,9 +1052,7 @@
     "ax.set_ylim(0, 1)\n",
     "ax.axis('off')\n",
     "\n",
-    "plt.show()\n",
-    "\n",
-    "# Uso\n"
+    "plt.show()\n"
    ]
   },
   {
